sandbox/output
MedicineClashTest.java:46: error: method of in class MedicineClash cannot be applied to given types;
            MedicineClash.of(customers, 90, LocalDate.now()));
                         ^
  required: List<Customer>
  found: List<Customer>,int,LocalDate
  reason: actual and formal argument lists differ in length
1 error
